<?xml version="1.0"?>
<package format="2">
  <name>lambt</name>
  <version>0.0.0</version>
  <description>LA Micro-Benchmarking Toolbox (Lambt)</description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslib</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
